# pars-diary

./: .env.dist  .gitignore  CHANGELOG.md  Dockerfile  README.md  TODO.md  ask_gpt.py  bot.py  changelog.md  db.py  hw.py  messages.py  models.py  notify.py  pars.py  pyproject.toml  requirements.txt  ruff.toml  todo.md  update_marks.py  yaya.json
.github/ISSUE_TEMPLATE/: заявить-об-ошибке.md  предложить-что-либо.md
docs/: 0. Содержание.md  1. Введение.md  1. Содержание.md  10. Заключение.md  2. Цель и задачи.md  3. Что не так сейчас (Раскрываем актуальность проекта).md  3. Что не так сейчас.md  4. Выбор платформы для проекта.md  5. База данных.md  6. Парсинг внутреннего API текущего дневника.md  7. Обработка данных.md  8. Уведомления.md  9. Заключение.md  9. ИИ функции.md  TODO.md  Untitled.md  app-todo.md  habr.md  num = 2.py  дзп.md  список команд.md
docs/.obsidian/: graph.json  workspace-mobile.json  workspace.json
docs/.obsidian/plugins/obsidian-file-color/: data.json
docs/.stfolder/: syncthing-folder-f73ef6.txt
docs/.stfolder.removed-20240919-000346/: 1. Содержание.md
docs/res/: site_reserve_copy.html
handlers/: __init__.py  about.py  admin.py  base_commands.py  ch.py  chatgpt.py  hw.py  keyboard.py  new.py  notify.py  start.py
locales/: messages.pot
locales/ru/LC_MESSAGES/: messages.po
notify/: __init__.py  __main__.py  main.py  types.py
pars_diary/: __init__.py  __main__.py  auth.py  bot.py  config.py  keyboards.py  messages.py  models.py  types.py
pars_diary/handlers/: __init__.py  about.py  admin.py  base_commands.py  ch.py  chatgpt.py  error.py  homework.py  hw.py  keyboard.py  new.py  notify.py  register.py  start.py
pars_diary/middlewares/: __init__.py  db.py
pars_diary/parser/: __init__.py  consts.py  db.py  exceptions.py  hw.py  pars.py  parser.py
pars_diary/services/: __init__.py  ch.py  demo.py  gpt.py  metrics.py
pars_diary/utils/: ask_gpt.py  ch.py  config.py  db.py  demo_data.py  exceptions.py  gpt.py  hw.py  keyboards.py  messages.py  pars.py  typing.py
pars_diary/utils/pars/: consts.py  pars.py
pars_diary/utils/pars/demo_data/: __init__.py  consts.py  main.py
pars_diary/utils/pars/demo_data/demo/: birthdays.json  hw.json  marks.json  person_data.json  total_marks.json
utils/: ask_gpt.py  ch.py  db.py  demo_data.py  exceptions.py  hw.py  keyboards.py  load_env.py  messages.py  pars.py  typing.py
