[project]
name = "pars-diary"
version = "0.1.1"
description = "Проект для улучшения успеваемости учеников, путем внедрения современных технологий."
authors = [{ name = "Ivan Melcikov", email = "vanamelcikov7275@gmail.com" }]
license = "MIT"
readme = "README.md"

dependencies = [
    "aiogram==3.22.0",
    "conversations-about-important-api==0.1.0",
    "fake-useragent==2.2.0",
    "gradio_client==1.3.0",
    "loguru==0.7.3",
    "matplotlib==3.10.0",
    "python-dotenv==1.1.1",
    "pydantic-settings==2.10.1",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Ошибки связанные с кирилицей
    "RUF001", "RUF002", "RUF003",

    # TODO
    "TD003", "FIX002",

    # Cравнение магических значений
    "PLR2004",

    # Работа с датой
    "DTZ005",
]
