[project]
name = "pars-diary"
version = "0.1.1"
description = "Проект для улучшения успеваемости учеников, путем внедрения современных технологий."
authors = [{ name = "Ivan Melcikov", email = "vanamelcikov7275@gmail.com" }]
license = "MIT"
readme = "README.md"

dependencies = [
    "aiogram==3.22.0",
    "bars-api",
    "cait-api",
    "conversations-about-important-api==0.1.0",
    "fake-useragent==2.2.0",
    "loguru==0.7.3",
    "matplotlib==3.10.0",
    "pydantic-settings==2.10.1",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Ошибки связанные с кирилицей
    "RUF001", "RUF002", "RUF003",

    # TODO
    "TD003", "FIX002",

    # Cравнение магических значений
    "PLR2004",

    # Работа с датой
    "DTZ005",
]

[tool.uv.sources]
cait-api = { git = "https://github.com/iamlostshe/cait-api" }
bars-api = { git = "https://github.com/iamlostshe/bars-api" }
